0.1.0
- Initial Release extracted from JsTestCore.
- Added JsTestCore::WebRoot.dispatch_specs and .dispatch_strategy
- Extracted JsTestCore::Resources::Specs::SpecDir
- Extracted JsTestCore::Resources::Specs::SpecFile