@@ -1,0 +1,2 @@
+dir = File.dirname(__FILE__)
+require "#{dir}/selenium/selenium_driver"
